# SimulIDE-dev

./: .gitignore  .gitmodules  CMakeLists.txt  SimulIDE.pri
resources/data/codeeditor/compilers/compilers/: arduino.xml
resources/examples/Micro/Arduino/arduino_eeprom/: arduino_eeprom.sim1
src/: mainwindow.cpp
src/angel/: Makefile
src/angel/JIT/: virtual_asm.h  virtual_asm_arm64.cpp  virtual_asm_macos.cpp
src/angel/src/: as_callfunc_arm64_gcc.S  as_config.h
src/gui/circuitwidget/: circuitview.cpp  circuitview.h
src/gui/editorwidget/: compiler.cpp  compiler.h
src/gui/editorwidget/debuggers/: inodebugger.cpp
src/microsim/cores/scripted/: scriptcpu.cpp
src/microsim/modules/script/: scriptbase.cpp  scriptbase.h
src/simulator/: simulator.cpp
