cmake_minimum_required(VERSION 3.29)
project(SimulIDE_dev)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_PREFIX_PATH "/opt/homebrew/Cellar/qt/lib/cmake")

find_package(Qt5Core REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Quick REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Xml REQUIRED)

target_link_libraries(Qt5::Core)
target_link_libraries(Qt5::Widgets)
target_link_libraries(Qt5::Quick)
target_link_libraries(Qt5::Gui)
target_link_libraries(Qt5::Xml)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)
include_directories(src/angel)
include_directories(src/angel/include)
include_directories(src/angel/src)
include_directories(src/components)
include_directories(src/components/active)
include_directories(src/components/connectors)
include_directories(src/components/graphical)
include_directories(src/components/logic)
include_directories(src/components/meters)
include_directories(src/components/micro)
include_directories(src/components/other)
include_directories(src/components/other/truthtable)
include_directories(src/components/outputs)
include_directories(src/components/outputs/displays)
include_directories(src/components/outputs/leds)
include_directories(src/components/outputs/motors)
include_directories(src/components/passive/reactive)
include_directories(src/components/passive/resist_sensors)
include_directories(src/components/passive/resistors)
include_directories(src/components/sources)
include_directories(src/components/subcircuits)
include_directories(src/components/switches)
include_directories(src/gui)
include_directories(src/gui/appdialogs)
include_directories(src/gui/circuitwidget)
include_directories(src/gui/componentlist)
include_directories(src/gui/dataplotwidget)
include_directories(src/gui/editorwidget)
include_directories(src/gui/editorwidget/debuggers)
include_directories(src/gui/editorwidget/dialogs)
include_directories(src/gui/filebrowser)
include_directories(src/gui/memory)
include_directories(src/gui/properties)
include_directories(src/gui/serial)
include_directories(src/microsim)
include_directories(src/microsim/cores)
include_directories(src/microsim/cores/avr)
include_directories(src/microsim/cores/i51)
include_directories(src/microsim/cores/intmem)
include_directories(src/microsim/cores/mcs65)
include_directories(src/microsim/cores/pic)
include_directories(src/microsim/cores/scripted)
include_directories(src/microsim/cores/z80)
include_directories(src/microsim/modules/script)
include_directories(src/microsim/modules/spi)
include_directories(src/microsim/modules/tcp)
include_directories(src/microsim/modules/twi)
include_directories(src/microsim/modules/usart)
include_directories(src/simulator)
include_directories(src/simulator/elements)
include_directories(src/simulator/elements/active)
include_directories(src/simulator/elements/outputs)
include_directories(src/simulator/elements/passive)
include_directories(/opt/homebrew/Cellar/qt/include)

add_executable(SimulIDE_dev
    src/angel/include/angelscript.h
    src/angel/src/as_array.h
    src/angel/src/as_atomic.cpp
    src/angel/src/as_atomic.h
    src/angel/src/as_builder.cpp
    src/angel/src/as_builder.h
    src/angel/src/as_bytecode.cpp
    src/angel/src/as_bytecode.h
    src/angel/src/as_callfunc.cpp
    src/angel/src/as_callfunc.h
    src/angel/src/as_callfunc_arm.cpp
    src/angel/src/as_callfunc_arm64.cpp
    src/angel/src/as_callfunc_mips.cpp
    src/angel/src/as_callfunc_ppc.cpp
    src/angel/src/as_callfunc_ppc_64.cpp
    src/angel/src/as_callfunc_riscv64.cpp
    src/angel/src/as_callfunc_sh4.cpp
    src/angel/src/as_callfunc_x64_gcc.cpp
    src/angel/src/as_callfunc_x64_mingw.cpp
    src/angel/src/as_callfunc_x64_msvc.cpp
    src/angel/src/as_callfunc_x86.cpp
    src/angel/src/as_callfunc_xenon.cpp
    src/angel/src/as_compiler.cpp
    src/angel/src/as_compiler.h
    src/angel/src/as_config.h
    src/angel/src/as_configgroup.cpp
    src/angel/src/as_configgroup.h
    src/angel/src/as_context.cpp
    src/angel/src/as_context.h
    src/angel/src/as_criticalsection.h
    src/angel/src/as_datatype.cpp
    src/angel/src/as_datatype.h
    src/angel/src/as_debug.h
    src/angel/src/as_gc.cpp
    src/angel/src/as_gc.h
    src/angel/src/as_generic.cpp
    src/angel/src/as_generic.h
    src/angel/src/as_globalproperty.cpp
    src/angel/src/as_map.h
    src/angel/src/as_memory.cpp
    src/angel/src/as_memory.h
    src/angel/src/as_module.cpp
    src/angel/src/as_module.h
    src/angel/src/as_namespace.h
    src/angel/src/as_objecttype.cpp
    src/angel/src/as_objecttype.h
    src/angel/src/as_outputbuffer.cpp
    src/angel/src/as_outputbuffer.h
    src/angel/src/as_parser.cpp
    src/angel/src/as_parser.h
    src/angel/src/as_property.h
    src/angel/src/as_restore.cpp
    src/angel/src/as_restore.h
    src/angel/src/as_scriptcode.cpp
    src/angel/src/as_scriptcode.h
    src/angel/src/as_scriptengine.cpp
    src/angel/src/as_scriptengine.h
    src/angel/src/as_scriptfunction.cpp
    src/angel/src/as_scriptfunction.h
    src/angel/src/as_scriptnode.cpp
    src/angel/src/as_scriptnode.h
    src/angel/src/as_scriptobject.cpp
    src/angel/src/as_scriptobject.h
    src/angel/src/as_string.cpp
    src/angel/src/as_string.h
    src/angel/src/as_string_util.cpp
    src/angel/src/as_string_util.h
    src/angel/src/as_symboltable.h
    src/angel/src/as_texts.h
    src/angel/src/as_thread.cpp
    src/angel/src/as_thread.h
    src/angel/src/as_tokendef.h
    src/angel/src/as_tokenizer.cpp
    src/angel/src/as_tokenizer.h
    src/angel/src/as_typeinfo.cpp
    src/angel/src/as_typeinfo.h
    src/angel/src/as_variablescope.cpp
    src/angel/src/as_variablescope.h
    src/angel/src/scriptarray.cpp
    src/angel/src/scriptarray.h
    src/angel/src/scripthelper.cpp
    src/angel/src/scripthelper.h
    src/angel/src/scriptstdstring.cpp
    src/angel/src/scriptstdstring.h
    src/components/active/bjt.cpp
    src/components/active/bjt.h
    src/components/active/comparator.cpp
    src/components/active/comparator.h
    src/components/active/diac.cpp
    src/components/active/diac.h
    src/components/active/diode.cpp
    src/components/active/diode.h
    src/components/active/mosfet.cpp
    src/components/active/mosfet.h
    src/components/active/mux_analog.cpp
    src/components/active/mux_analog.h
    src/components/active/op_amp.cpp
    src/components/active/op_amp.h
    src/components/active/scr.cpp
    src/components/active/scr.h
    src/components/active/triac.cpp
    src/components/active/triac.h
    src/components/active/volt_reg.cpp
    src/components/active/volt_reg.h
    src/components/active/zener.cpp
    src/components/active/zener.h
    src/components/connectors/header.cpp
    src/components/connectors/header.h
    src/components/connectors/socket.cpp
    src/components/connectors/socket.h
    src/components/connectors/tunnel.cpp
    src/components/connectors/tunnel.h
    src/components/graphical/ellipse.cpp
    src/components/graphical/ellipse.h
    src/components/graphical/image.cpp
    src/components/graphical/image.h
    src/components/graphical/line.cpp
    src/components/graphical/line.h
    src/components/graphical/rectangle.cpp
    src/components/graphical/rectangle.h
    src/components/graphical/shape.cpp
    src/components/graphical/shape.h
    src/components/graphical/textcomponent.cpp
    src/components/graphical/textcomponent.h
    src/components/logic/adc.cpp
    src/components/logic/adc.h
    src/components/logic/bcdbase.cpp
    src/components/logic/bcdbase.h
    src/components/logic/bcdto7s.cpp
    src/components/logic/bcdto7s.h
    src/components/logic/bcdtodec.cpp
    src/components/logic/bcdtodec.h
    src/components/logic/bincounter.cpp
    src/components/logic/bincounter.h
    src/components/logic/buffer.cpp
    src/components/logic/buffer.h
    src/components/logic/bus.cpp
    src/components/logic/bus.h
    src/components/logic/dac.cpp
    src/components/logic/dac.h
    src/components/logic/dectobcd.cpp
    src/components/logic/dectobcd.h
    src/components/logic/demux.cpp
    src/components/logic/demux.h
    src/components/logic/dynamic_memory.cpp
    src/components/logic/dynamic_memory.h
    src/components/logic/flipflopbase.cpp
    src/components/logic/flipflopbase.h
    src/components/logic/flipflopd.cpp
    src/components/logic/flipflopd.h
    src/components/logic/flipflopjk.cpp
    src/components/logic/flipflopjk.h
    src/components/logic/flipfloprs.cpp
    src/components/logic/flipfloprs.h
    src/components/logic/flipflopt.cpp
    src/components/logic/flipflopt.h
    src/components/logic/fulladder.cpp
    src/components/logic/fulladder.h
    src/components/logic/function.cpp
    src/components/logic/function.h
    src/components/logic/gate.cpp
    src/components/logic/gate.h
    src/components/logic/gate_and.cpp
    src/components/logic/gate_and.h
    src/components/logic/gate_or.cpp
    src/components/logic/gate_or.h
    src/components/logic/gate_xor.cpp
    src/components/logic/gate_xor.h
    src/components/logic/i2cram.cpp
    src/components/logic/i2cram.h
    src/components/logic/i2ctoparallel.cpp
    src/components/logic/i2ctoparallel.h
    src/components/logic/latchd.cpp
    src/components/logic/latchd.h
    src/components/logic/lm555.cpp
    src/components/logic/lm555.h
    src/components/logic/magnitudecomp.cpp
    src/components/logic/magnitudecomp.h
    src/components/logic/memory.cpp
    src/components/logic/memory.h
    src/components/logic/mux.cpp
    src/components/logic/mux.h
    src/components/logic/sevensegment_bcd.cpp
    src/components/logic/sevensegment_bcd.h
    src/components/logic/shiftreg.cpp
    src/components/logic/shiftreg.h
    src/components/meters/ampmeter.cpp
    src/components/meters/ampmeter.h
    src/components/meters/freqmeter.cpp
    src/components/meters/freqmeter.h
    src/components/meters/lachannel.cpp
    src/components/meters/lachannel.h
    src/components/meters/logicanalizer.cpp
    src/components/meters/logicanalizer.h
    src/components/meters/meter.cpp
    src/components/meters/meter.h
    src/components/meters/oscope.cpp
    src/components/meters/oscope.h
    src/components/meters/oscopechannel.cpp
    src/components/meters/oscopechannel.h
    src/components/meters/probe.cpp
    src/components/meters/probe.h
    src/components/meters/voltmeter.cpp
    src/components/meters/voltmeter.h
    src/components/micro/dht22.cpp
    src/components/micro/dht22.h
    src/components/micro/ds1307.cpp
    src/components/micro/ds1307.h
    src/components/micro/ds1621.cpp
    src/components/micro/ds1621.h
    src/components/micro/ds18b20.cpp
    src/components/micro/ds18b20.h
    src/components/micro/esp01.cpp
    src/components/micro/esp01.h
    src/components/micro/ky023.cpp
    src/components/micro/ky023.h
    src/components/micro/ky040.cpp
    src/components/micro/ky040.h
    src/components/micro/rtclock.cpp
    src/components/micro/rtclock.h
    src/components/micro/serialport.cpp
    src/components/micro/serialport.h
    src/components/micro/serialterm.cpp
    src/components/micro/serialterm.h
    src/components/micro/sr04.cpp
    src/components/micro/sr04.h
    src/components/micro/touchpad.cpp
    src/components/micro/touchpad.h
    src/components/micro/touchpadwidget.cpp
    src/components/micro/touchpadwidget.h
    src/components/other/truthtable/truthtable.cpp
    src/components/other/truthtable/truthtable.h
    src/components/other/dial.cpp
    src/components/other/dial.h
    src/components/other/packagepin.cpp
    src/components/other/packagepin.h
    src/components/other/subpackage.cpp
    src/components/other/subpackage.h
    src/components/other/testunit.cpp
    src/components/other/testunit.h
    src/components/outputs/displays/aip31068_i2c.cpp
    src/components/outputs/displays/aip31068_i2c.h
    src/components/outputs/displays/hd44780.cpp
    src/components/outputs/displays/hd44780.h
    src/components/outputs/displays/hd44780_base.cpp
    src/components/outputs/displays/hd44780_base.h
    src/components/outputs/displays/ili9341.cpp
    src/components/outputs/displays/ili9341.h
    src/components/outputs/displays/ks0108.cpp
    src/components/outputs/displays/ks0108.h
    src/components/outputs/displays/pcd8544.cpp
    src/components/outputs/displays/pcd8544.h
    src/components/outputs/displays/ssd1306.cpp
    src/components/outputs/displays/ssd1306.h
    src/components/outputs/leds/led.cpp
    src/components/outputs/leds/led.h
    src/components/outputs/leds/ledbar.cpp
    src/components/outputs/leds/ledbar.h
    src/components/outputs/leds/ledbase.cpp
    src/components/outputs/leds/ledbase.h
    src/components/outputs/leds/ledmatrix.cpp
    src/components/outputs/leds/ledmatrix.h
    src/components/outputs/leds/ledrgb.cpp
    src/components/outputs/leds/ledrgb.h
    src/components/outputs/leds/ledsmd.cpp
    src/components/outputs/leds/ledsmd.h
    src/components/outputs/leds/max72xx_matrix.cpp
    src/components/outputs/leds/max72xx_matrix.h
    src/components/outputs/leds/sevensegment.cpp
    src/components/outputs/leds/sevensegment.h
    src/components/outputs/leds/ws2812.cpp
    src/components/outputs/leds/ws2812.h
    src/components/outputs/motors/dcmotor.cpp
    src/components/outputs/motors/dcmotor.h
    src/components/outputs/motors/servo.cpp
    src/components/outputs/motors/servo.h
    src/components/outputs/motors/stepper.cpp
    src/components/outputs/motors/stepper.h
    src/components/outputs/audio_out.cpp
    src/components/outputs/audio_out.h
    src/components/outputs/lamp.cpp
    src/components/outputs/lamp.h
    src/components/passive/reactive/capacitor.cpp
    src/components/passive/reactive/capacitor.h
    src/components/passive/reactive/capacitorbase.cpp
    src/components/passive/reactive/capacitorbase.h
    src/components/passive/reactive/elcapacitor.cpp
    src/components/passive/reactive/elcapacitor.h
    src/components/passive/reactive/inductor.cpp
    src/components/passive/reactive/inductor.h
    src/components/passive/reactive/reactive.cpp
    src/components/passive/reactive/reactive.h
    src/components/passive/reactive/transformer.cpp
    src/components/passive/reactive/transformer.h
    src/components/passive/resist_sensors/ldr.cpp
    src/components/passive/resist_sensors/ldr.h
    src/components/passive/resist_sensors/rtd.cpp
    src/components/passive/resist_sensors/rtd.h
    src/components/passive/resist_sensors/strain.cpp
    src/components/passive/resist_sensors/strain.h
    src/components/passive/resist_sensors/thermistor.cpp
    src/components/passive/resist_sensors/thermistor.h
    src/components/passive/resist_sensors/thermistorbase.cpp
    src/components/passive/resist_sensors/thermistorbase.h
    src/components/passive/resistors/potentiometer.cpp
    src/components/passive/resistors/potentiometer.h
    src/components/passive/resistors/resistor.cpp
    src/components/passive/resistors/resistor.h
    src/components/passive/resistors/resistordip.cpp
    src/components/passive/resistors/resistordip.h
    src/components/passive/resistors/varresbase.cpp
    src/components/passive/resistors/varresbase.h
    src/components/passive/resistors/varresistor.cpp
    src/components/passive/resistors/varresistor.h
    src/components/sources/battery.cpp
    src/components/sources/battery.h
    src/components/sources/clock-base.cpp
    src/components/sources/clock-base.h
    src/components/sources/clock.cpp
    src/components/sources/clock.h
    src/components/sources/csource.cpp
    src/components/sources/csource.h
    src/components/sources/currsource.cpp
    src/components/sources/currsource.h
    src/components/sources/fixedvolt.cpp
    src/components/sources/fixedvolt.h
    src/components/sources/ground.cpp
    src/components/sources/ground.h
    src/components/sources/rail.cpp
    src/components/sources/rail.h
    src/components/sources/varsource.cpp
    src/components/sources/varsource.h
    src/components/sources/voltsource.cpp
    src/components/sources/voltsource.h
    src/components/sources/wavegen.cpp
    src/components/sources/wavegen.h
    src/components/subcircuits/board.cpp
    src/components/subcircuits/board.h
    src/components/subcircuits/chip.cpp
    src/components/subcircuits/chip.h
    src/components/subcircuits/logicsubc.cpp
    src/components/subcircuits/logicsubc.h
    src/components/subcircuits/module.cpp
    src/components/subcircuits/module.h
    src/components/subcircuits/shield.cpp
    src/components/subcircuits/shield.h
    src/components/subcircuits/subcircuit.cpp
    src/components/subcircuits/subcircuit.h
    src/components/switches/keypad.cpp
    src/components/switches/keypad.h
    src/components/switches/mech_contact.cpp
    src/components/switches/mech_contact.h
    src/components/switches/push.cpp
    src/components/switches/push.h
    src/components/switches/push_base.cpp
    src/components/switches/push_base.h
    src/components/switches/relay.cpp
    src/components/switches/relay.h
    src/components/switches/switch.cpp
    src/components/switches/switch.h
    src/components/switches/switch_base.cpp
    src/components/switches/switch_base.h
    src/components/switches/switchdip.cpp
    src/components/switches/switchdip.h
    src/components/comp2pin.cpp
    src/components/comp2pin.h
    src/components/component.cpp
    src/components/component.h
    src/components/iocomponent.cpp
    src/components/iocomponent.h
    src/components/linker.cpp
    src/components/linker.h
    src/components/linkercomponent.cpp
    src/components/linkercomponent.h
    src/components/logiccomponent.cpp
    src/components/logiccomponent.h
    src/components/logicfamily.cpp
    src/components/logicfamily.h
    src/components/node.cpp
    src/components/node.h
    src/gui/appdialogs/about.cpp
    src/gui/appdialogs/about.h
    src/gui/appdialogs/appdialog.cpp
    src/gui/appdialogs/appdialog.h
    src/gui/appdialogs/infowidget.cpp
    src/gui/appdialogs/infowidget.h
    src/gui/circuitwidget/circuit.cpp
    src/gui/circuitwidget/circuit.h
    src/gui/circuitwidget/circuitview.cpp
    src/gui/circuitwidget/circuitview.h
    src/gui/circuitwidget/circuitwidget.cpp
    src/gui/circuitwidget/circuitwidget.h
    src/gui/circuitwidget/compbase.cpp
    src/gui/circuitwidget/compbase.h
    src/gui/circuitwidget/connbase.cpp
    src/gui/circuitwidget/connbase.h
    src/gui/circuitwidget/connector.cpp
    src/gui/circuitwidget/connector.h
    src/gui/circuitwidget/connectorline.cpp
    src/gui/circuitwidget/connectorline.h
    src/gui/circuitwidget/dialed.cpp
    src/gui/circuitwidget/dialed.h
    src/gui/circuitwidget/iopin.cpp
    src/gui/circuitwidget/iopin.h
    src/gui/circuitwidget/ioport.cpp
    src/gui/circuitwidget/ioport.h
    src/gui/circuitwidget/label.cpp
    src/gui/circuitwidget/label.h
    src/gui/circuitwidget/pin.cpp
    src/gui/circuitwidget/pin.h
    src/gui/circuitwidget/updatable.cpp
    src/gui/circuitwidget/updatable.h
    src/gui/componentlist/componentlist.cpp
    src/gui/componentlist/componentlist.h
    src/gui/componentlist/itemlibrary.cpp
    src/gui/componentlist/itemlibrary.h
    src/gui/componentlist/managecomps.cpp
    src/gui/componentlist/managecomps.h
    src/gui/componentlist/treeitem.cpp
    src/gui/componentlist/treeitem.h
    src/gui/dataplotwidget/datachannel.cpp
    src/gui/dataplotwidget/datachannel.h
    src/gui/dataplotwidget/datalawidget.cpp
    src/gui/dataplotwidget/datalawidget.h
    src/gui/dataplotwidget/datawidget.cpp
    src/gui/dataplotwidget/datawidget.h
    src/gui/dataplotwidget/lawidget.cpp
    src/gui/dataplotwidget/lawidget.h
    src/gui/dataplotwidget/oscwidget.cpp
    src/gui/dataplotwidget/oscwidget.h
    src/gui/dataplotwidget/plotbase.cpp
    src/gui/dataplotwidget/plotbase.h
    src/gui/dataplotwidget/plotdisplay.cpp
    src/gui/dataplotwidget/plotdisplay.h
    src/gui/dataplotwidget/plotspinbox.cpp
    src/gui/dataplotwidget/plotspinbox.h
    src/gui/editorwidget/debuggers/asdebugger.cpp
    src/gui/editorwidget/debuggers/asdebugger.h
    src/gui/editorwidget/debuggers/avrgccdebugger.cpp
    src/gui/editorwidget/debuggers/avrgccdebugger.h
    src/gui/editorwidget/debuggers/cdebugger.cpp
    src/gui/editorwidget/debuggers/cdebugger.h
    src/gui/editorwidget/debuggers/gcbdebugger.cpp
    src/gui/editorwidget/debuggers/gcbdebugger.h
    src/gui/editorwidget/debuggers/gputilsdebug.cpp
    src/gui/editorwidget/debuggers/gputilsdebug.h
    src/gui/editorwidget/debuggers/inodebugger.cpp
    src/gui/editorwidget/debuggers/inodebugger.h
    src/gui/editorwidget/debuggers/sdccdebugger.cpp
    src/gui/editorwidget/debuggers/sdccdebugger.h
    src/gui/editorwidget/debuggers/xc8debugger.cpp
    src/gui/editorwidget/debuggers/xc8debugger.h
    src/gui/editorwidget/dialogs/findreplace.cpp
    src/gui/editorwidget/dialogs/findreplace.h
    src/gui/editorwidget/basedebugger.cpp
    src/gui/editorwidget/basedebugger.h
    src/gui/editorwidget/codeeditor.cpp
    src/gui/editorwidget/codeeditor.h
    src/gui/editorwidget/compiler.cpp
    src/gui/editorwidget/compiler.h
    src/gui/editorwidget/editorwidget.cpp
    src/gui/editorwidget/editorwidget.h
    src/gui/editorwidget/editorwindow.cpp
    src/gui/editorwidget/editorwindow.h
    src/gui/editorwidget/highlighter.cpp
    src/gui/editorwidget/highlighter.h
    src/gui/editorwidget/scrollbar.cpp
    src/gui/editorwidget/scrollbar.h
    src/gui/filebrowser/filebrowser.cpp
    src/gui/filebrowser/filebrowser.h
    src/gui/filebrowser/filewidget.cpp
    src/gui/filebrowser/filewidget.h
    src/gui/memory/headerwidget.cpp
    src/gui/memory/headerwidget.h
    src/gui/memory/mcumonitor.cpp
    src/gui/memory/mcumonitor.h
    src/gui/memory/memdata.cpp
    src/gui/memory/memdata.h
    src/gui/memory/memtable.cpp
    src/gui/memory/memtable.h
    src/gui/memory/ramtable.cpp
    src/gui/memory/ramtable.h
    src/gui/memory/valuewidget.cpp
    src/gui/memory/valuewidget.h
    src/gui/memory/watcher.cpp
    src/gui/memory/watcher.h
    src/gui/properties/boolprop.h
    src/gui/properties/boolval.cpp
    src/gui/properties/boolval.h
    src/gui/properties/colorval.cpp
    src/gui/properties/colorval.h
    src/gui/properties/comproperty.cpp
    src/gui/properties/comproperty.h
    src/gui/properties/doubleprop.h
    src/gui/properties/dspinbox.cpp
    src/gui/properties/dspinbox.h
    src/gui/properties/enumval.cpp
    src/gui/properties/enumval.h
    src/gui/properties/intprop.h
    src/gui/properties/labelval.cpp
    src/gui/properties/labelval.h
    src/gui/properties/numprop.cpp
    src/gui/properties/numprop.h
    src/gui/properties/numval.cpp
    src/gui/properties/numval.h
    src/gui/properties/pathval.cpp
    src/gui/properties/pathval.h
    src/gui/properties/pointprop.h
    src/gui/properties/propdialog.cpp
    src/gui/properties/propdialog.h
    src/gui/properties/proputils.cpp
    src/gui/properties/proputils.h
    src/gui/properties/propval.cpp
    src/gui/properties/propval.h
    src/gui/properties/scriptprop.h
    src/gui/properties/stringprop.h
    src/gui/properties/strval.cpp
    src/gui/properties/strval.h
    src/gui/properties/textval.cpp
    src/gui/properties/textval.h
    src/gui/serial/console.cpp
    src/gui/serial/console.h
    src/gui/serial/serialmon.cpp
    src/gui/serial/serialmon.h
    src/gui/custombutton.cpp
    src/gui/custombutton.h
    src/gui/customdial.cpp
    src/gui/customdial.h
    src/gui/customslider.cpp
    src/gui/customslider.h
    src/gui/dialwidget.cpp
    src/gui/dialwidget.h
    src/gui/joystickwidget.cpp
    src/gui/joystickwidget.h
    src/gui/outpaneltext.cpp
    src/gui/outpaneltext.h
    src/gui/sourcewidget.cpp
    src/gui/sourcewidget.h
    src/microsim/cores/avr/avr_defines.h
    src/microsim/cores/avr/avradc.cpp
    src/microsim/cores/avr/avradc.h
    src/microsim/cores/avr/avrcomparator.cpp
    src/microsim/cores/avr/avrcomparator.h
    src/microsim/cores/avr/avrcore.cpp
    src/microsim/cores/avr/avrcore.h
    src/microsim/cores/avr/avreeprom.cpp
    src/microsim/cores/avr/avreeprom.h
    src/microsim/cores/avr/avricunit.cpp
    src/microsim/cores/avr/avricunit.h
    src/microsim/cores/avr/avrinterrupt.cpp
    src/microsim/cores/avr/avrinterrupt.h
    src/microsim/cores/avr/avrintosc.cpp
    src/microsim/cores/avr/avrintosc.h
    src/microsim/cores/avr/avrocm.cpp
    src/microsim/cores/avr/avrocm.h
    src/microsim/cores/avr/avrocunit.cpp
    src/microsim/cores/avr/avrocunit.h
    src/microsim/cores/avr/avrpin.cpp
    src/microsim/cores/avr/avrpin.h
    src/microsim/cores/avr/avrport.cpp
    src/microsim/cores/avr/avrport.h
    src/microsim/cores/avr/avrsleep.cpp
    src/microsim/cores/avr/avrsleep.h
    src/microsim/cores/avr/avrspi.cpp
    src/microsim/cores/avr/avrspi.h
    src/microsim/cores/avr/avrtimer.cpp
    src/microsim/cores/avr/avrtimer.h
    src/microsim/cores/avr/avrtwi.cpp
    src/microsim/cores/avr/avrtwi.h
    src/microsim/cores/avr/avrtwicodes.h
    src/microsim/cores/avr/avrusart.cpp
    src/microsim/cores/avr/avrusart.h
    src/microsim/cores/avr/avrusi.cpp
    src/microsim/cores/avr/avrusi.h
    src/microsim/cores/avr/avrwdt.cpp
    src/microsim/cores/avr/avrwdt.h
    src/microsim/cores/i51/i51core.cpp
    src/microsim/cores/i51/i51core.h
    src/microsim/cores/i51/i51pin.cpp
    src/microsim/cores/i51/i51pin.h
    src/microsim/cores/i51/i51port.cpp
    src/microsim/cores/i51/i51port.h
    src/microsim/cores/i51/i51timer.cpp
    src/microsim/cores/i51/i51timer.h
    src/microsim/cores/i51/i51usart.cpp
    src/microsim/cores/i51/i51usart.h
    src/microsim/cores/intmem/intmemcore.cpp
    src/microsim/cores/intmem/intmemcore.h
    src/microsim/cores/mcs65/mcs65core.cpp
    src/microsim/cores/mcs65/mcs65core.h
    src/microsim/cores/mcs65/mcs65interface.cpp
    src/microsim/cores/mcs65/mcs65interface.h
    src/microsim/cores/pic/pic14core.cpp
    src/microsim/cores/pic/pic14core.h
    src/microsim/cores/pic/pic14ecore.cpp
    src/microsim/cores/pic/pic14ecore.h
    src/microsim/cores/pic/pic14einterrupt.cpp
    src/microsim/cores/pic/pic14einterrupt.h
    src/microsim/cores/pic/picadc.cpp
    src/microsim/cores/pic/picadc.h
    src/microsim/cores/pic/picccpunit.cpp
    src/microsim/cores/pic/picccpunit.h
    src/microsim/cores/pic/piccomparator.cpp
    src/microsim/cores/pic/piccomparator.h
    src/microsim/cores/pic/picconfigword.cpp
    src/microsim/cores/pic/picconfigword.h
    src/microsim/cores/pic/picdac.cpp
    src/microsim/cores/pic/picdac.h
    src/microsim/cores/pic/piceeprom.cpp
    src/microsim/cores/pic/piceeprom.h
    src/microsim/cores/pic/picicunit.cpp
    src/microsim/cores/pic/picicunit.h
    src/microsim/cores/pic/picinterrupt.cpp
    src/microsim/cores/pic/picinterrupt.h
    src/microsim/cores/pic/picintosc.cpp
    src/microsim/cores/pic/picintosc.h
    src/microsim/cores/pic/picmrcore.cpp
    src/microsim/cores/pic/picmrcore.h
    src/microsim/cores/pic/picmssp.cpp
    src/microsim/cores/pic/picmssp.h
    src/microsim/cores/pic/picocunit.cpp
    src/microsim/cores/pic/picocunit.h
    src/microsim/cores/pic/picpin.cpp
    src/microsim/cores/pic/picpin.h
    src/microsim/cores/pic/picport.cpp
    src/microsim/cores/pic/picport.h
    src/microsim/cores/pic/picsleep.cpp
    src/microsim/cores/pic/picsleep.h
    src/microsim/cores/pic/picspi.cpp
    src/microsim/cores/pic/picspi.h
    src/microsim/cores/pic/pictimer.cpp
    src/microsim/cores/pic/pictimer.h
    src/microsim/cores/pic/pictwi.cpp
    src/microsim/cores/pic/pictwi.h
    src/microsim/cores/pic/picusart.cpp
    src/microsim/cores/pic/picusart.h
    src/microsim/cores/pic/picvref.cpp
    src/microsim/cores/pic/picvref.h
    src/microsim/cores/pic/picwdt.cpp
    src/microsim/cores/pic/picwdt.h
    src/microsim/cores/scripted/display.cpp
    src/microsim/cores/scripted/display.h
    src/microsim/cores/scripted/scriptcpu.cpp
    src/microsim/cores/scripted/scriptcpu.h
    src/microsim/cores/scripted/scriptdisplay.cpp
    src/microsim/cores/scripted/scriptdisplay.h
    src/microsim/cores/scripted/scriptperif.cpp
    src/microsim/cores/scripted/scriptperif.h
    src/microsim/cores/scripted/scriptport.cpp
    src/microsim/cores/scripted/scriptport.h
    src/microsim/cores/scripted/scriptspi.cpp
    src/microsim/cores/scripted/scriptspi.h
    src/microsim/cores/scripted/scripttcp.cpp
    src/microsim/cores/scripted/scripttcp.h
    src/microsim/cores/scripted/scripttwi.cpp
    src/microsim/cores/scripted/scripttwi.h
    src/microsim/cores/scripted/scriptusart.cpp
    src/microsim/cores/scripted/scriptusart.h
    src/microsim/cores/z80/ula_zx48k.cpp
    src/microsim/cores/z80/ula_zx48k.h
    src/microsim/cores/z80/z80core.cpp
    src/microsim/cores/z80/z80core.h
    src/microsim/cores/z80/z80cycles.h
    src/microsim/cores/z80/z80regs.h
    src/microsim/cores/corebase.cpp
    src/microsim/cores/corebase.h
    src/microsim/cores/cpubase.cpp
    src/microsim/cores/cpubase.h
    src/microsim/cores/mcucpu.cpp
    src/microsim/cores/mcucpu.h
    src/microsim/modules/script/scriptbase.cpp
    src/microsim/modules/script/scriptbase.h
    src/microsim/modules/script/scriptmodule.cpp
    src/microsim/modules/script/scriptmodule.h
    src/microsim/modules/spi/spimodule.cpp
    src/microsim/modules/spi/spimodule.h
    src/microsim/modules/tcp/tcpmodule.cpp
    src/microsim/modules/tcp/tcpmodule.h
    src/microsim/modules/twi/twimodule.cpp
    src/microsim/modules/twi/twimodule.h
    src/microsim/modules/usart/usartmodule.cpp
    src/microsim/modules/usart/usartmodule.h
    src/microsim/modules/usart/usartrx.cpp
    src/microsim/modules/usart/usartrx.h
    src/microsim/modules/usart/usarttx.cpp
    src/microsim/modules/usart/usarttx.h
    src/microsim/datautils.cpp
    src/microsim/datautils.h
    src/microsim/e_iou.cpp
    src/microsim/e_iou.h
    src/microsim/e_mcu.cpp
    src/microsim/e_mcu.h
    src/microsim/mcu.cpp
    src/microsim/mcu.h
    src/microsim/mcuadc.cpp
    src/microsim/mcuadc.h
    src/microsim/mcucomparator.cpp
    src/microsim/mcucomparator.h
    src/microsim/mcuconfigword.cpp
    src/microsim/mcuconfigword.h
    src/microsim/mcucreator.cpp
    src/microsim/mcucreator.h
    src/microsim/mcudac.cpp
    src/microsim/mcudac.h
    src/microsim/mcudataspace.cpp
    src/microsim/mcudataspace.h
    src/microsim/mcueeprom.cpp
    src/microsim/mcueeprom.h
    src/microsim/mcuicunit.cpp
    src/microsim/mcuicunit.h
    src/microsim/mcuinterrupts.cpp
    src/microsim/mcuinterrupts.h
    src/microsim/mcuintosc.cpp
    src/microsim/mcuintosc.h
    src/microsim/mcumodule.cpp
    src/microsim/mcumodule.h
    src/microsim/mcuocm.cpp
    src/microsim/mcuocm.h
    src/microsim/mcuocunit.cpp
    src/microsim/mcuocunit.h
    src/microsim/mcupin.cpp
    src/microsim/mcupin.h
    src/microsim/mcuport.cpp
    src/microsim/mcuport.h
    src/microsim/mcuprescaled.cpp
    src/microsim/mcuprescaled.h
    src/microsim/mcusignal.h
    src/microsim/mcusleep.cpp
    src/microsim/mcusleep.h
    src/microsim/mcuspi.cpp
    src/microsim/mcuspi.h
    src/microsim/mcutimer.cpp
    src/microsim/mcutimer.h
    src/microsim/mcutwi.cpp
    src/microsim/mcutwi.h
    src/microsim/mcutypes.h
    src/microsim/mcuuart.cpp
    src/microsim/mcuuart.h
    src/microsim/mcuvref.cpp
    src/microsim/mcuvref.h
    src/microsim/mcuwdt.cpp
    src/microsim/mcuwdt.h
    src/microsim/regwatcher.h
    src/simulator/elements/active/e-bjt.cpp
    src/simulator/elements/active/e-bjt.h
    src/simulator/elements/active/e-diode.cpp
    src/simulator/elements/active/e-diode.h
    src/simulator/elements/active/e-mosfet.cpp
    src/simulator/elements/active/e-mosfet.h
    src/simulator/elements/outputs/e-led.cpp
    src/simulator/elements/outputs/e-led.h
    src/simulator/elements/passive/e-coil.cpp
    src/simulator/elements/passive/e-coil.h
    src/simulator/elements/passive/e-reactive.cpp
    src/simulator/elements/passive/e-reactive.h
    src/simulator/elements/passive/e-resistor.cpp
    src/simulator/elements/passive/e-resistor.h
    src/simulator/elements/e-clocked_device.cpp
    src/simulator/elements/e-clocked_device.h
    src/simulator/circmatrix.cpp
    src/simulator/circmatrix.h
    src/simulator/e-element.cpp
    src/simulator/e-element.h
    src/simulator/e-node.cpp
    src/simulator/e-node.h
    src/simulator/e-pin.cpp
    src/simulator/e-pin.h
    src/simulator/simulator.cpp
    src/simulator/simulator.h
    src/main.cpp
    src/mainwindow.cpp
    src/mainwindow.h
    src/utils.cpp
    src/utils.h)
